Lab_09: without redis

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html>
-  <body>
-    <p id='server-time'></p>
-    <script>
-      var HOST = location.origin.replace(/^http/, 'ws')
-      var ws = new WebSocket(HOST);
-      var el = document.getElementById('server-time');
+  
+<body>
+  <p id='server-time'></p>
+  <script>
+    var HOST = location.origin.replace(/^http/, 'ws')
+    var ws = new WebSocket(HOST);
+    var el = document.getElementById('server-time');
 
-      ws.onmessage = function (event) {
-        el.innerHTML = 'Server time: ' + event.data;
-      };
-    </script>
-  </body>
+    ws.onmessage = function (event) {
+      if (event.data)
+        console.log(event.data);
+      el.innerHTML += 'Data: ' + event.data + "<br>";
+    };
+    
+  </script>
+</body>
+
 </html>
